# shcheck

./: .gitignore  README.md  pyproject.toml
shcheck/: shcheck.py
